k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: flask-devops-api
  namespace: flask-prod
  labels:
    monitoring: prometheus

spec:
  selector:
    app: flask-devops-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
